infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.careerconnect.cloud
      http:
        paths:
          - path: /api/v1/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-srv
                port:
                  number: 3000
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/jobs/?(.*)
            pathType: Prefix
            backend:
              service:
                name: jobservice-srv
                port:
                  number: 3000
          - path: /api/v1/profile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-srv
                port:
                  number: 3000
          - path: /api/v1/skill-test/?(.*)
            pathType: Prefix
            backend:
              service:
                name: skilltest-srv
                port:
                  number: 3000    
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-app-srv
                port:
                  number: 3000
